# nes_emulator

./: .gitignore  Bus.cpp  Bus.h  CMakeCache.txt  CMakeLists.txt  CPU.cpp  CPU.h  CPU_Test  Emulator  Makefile  MyNesEmulator  OpCode.cpp  OpCode.h  README.md  bus.cpp  bus.h  cartridge.cpp  cartridge.h  cmake_install.cmake  cpu.cpp  cpu.h  cpu_game_test.cpp  cpu_run.cpp  cpu_test.cpp  emulator.cpp  joypad.cpp  main.cpp  op_code.h  render.h  rom_test.cpp  tile_test.cpp  trace.cpp  trace.h
.cache/clangd/index/: Bus.cpp.2E2C0A7E7A61CDAA.idx  Bus.h.7283E88ACD28AA12.idx  CPU.cpp.626FC3AD894DD6E3.idx  CPU.h.389A542BC5F98108.idx  OpCode.h.0B76F475C1E717FC.idx  Opcode.cpp.6836FEB8CF3A23DB.idx  addr.h.3FBDE9786D9DD441.idx  cartridge.cpp.81EB9AEF16A9A7B4.idx  cartridge.h.BA89B96462C0169A.idx  control.h.23718EB8A2B76E57.idx  cpu_game_test.cpp.916AB4FE9DAB8BC7.idx  cpu_test.cpp.0A5DC9CDF05EE020.idx  main.cpp.0B80C96DAF0B79F0.idx  ppu.h.546DAD7F3BD196CB.idx  rom_test.cpp.E807E02FA347FA7B.idx  trace.cpp.F550915459A8ED6F.idx  trace.h.1B05AC9A6D474CD1.idx
bus/: bus.cpp  bus.h
cartridge/: cartridge.cpp
cpu/: cpu.cpp  cpu.h  cpu_run.cpp  cpu_test.cpp  op_code.cpp
emulator/: emulator.cpp  render.cpp  trace.cpp  trace.h
joypad/: joypad.h
ppu/: ppu.cpp  ppu.h  test_ppu  testppu.cpp
ppu/registers/: addr.cpp  addr.h  control.cpp  control.h  mask.cpp  mask.h  scroll.cpp  scroll.h  status.cpp  status.h
render/: frame.h  palette.cpp  palette.h  render.cpp  render.h
